<resources>
    <string name="app_name">JioLocal</string>
    <string name="ServiceTitle">Daily Salad Meals</string>
    <string name="Rate">Rs. 1400</string>
    <string name="discountedPrice"><strike>Rs 1800</strike></string>
    <string name="TimeInWords">/week</string>
    <string name="rating">4.1</string>
    <string name="NoOfrating">4 ratings</string>
    <string name="offers">Offers</string>
    <string name="Offers">Offers</string>
    <string name="TypeServiceList">Service Lists</string>
    <string name="TopOffers">Top Offers</string>
    <string name="PopularServices">Popular Services</string>
    <string name="TopRecentlyViewed">Recently Viewed</string>
    <string name="viewAll">View All Services</string>
    <string name="saloon">Saloon</string>
    <string name="dataType">Data Type</string>
    <string name="ServiceListHead">Service List</string>
    <string name="pin">Enter pincode</string>
    <string name="pinDescription">Enter pincode to see service availability</string>
    <string name="detecMyLocation">Detect My Location</string>
    <string name="apply">Apply</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mumbai">Mumbai,</string>
    <string name="pinDemo">40078</string>
    <string name="massage_for_women">Massage For Women</string>
    <string name="starting_at">Starting at</string>
    <string name="rs_1200">Rs 1200</string>
    <string name="recentlyViewed">Recently Viewed</string>
    <string name="addressLine1">Tawnagar Co-op , HOusing Society, 202</string>
    <string name="open">OPEN</string>
    <string name="closesAt">"Closes at 9 pm "</string>
    <string name="monday">Monday</string>
    <string name="closed">Closed</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="callNow">"Call Now "</string>
    <string name="book_appointment">\u0020\u0020 Book Appointment</string>
    <string name="add">1 added</string>
    <string name="_70_min">70 min</string>
    <string name="view_details">View Details</string>
    <string name="serviceTypes">Services Types</string>
</resources>