<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="TopOfferItem"
            type="com.example.jiolocal.dao.TopOffers" />
    </data>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
    app:cardCornerRadius="10dp"
    android:elevation="4dp"
        android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="300dp"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:id="@+id/topOfferImage"
        android:src="@drawable/food_image"
        android:scaleType="fitXY"
        Image="@(TopOfferItem.insertImageOffer)"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/massage_for_women"
        title="@(TopOfferItem.setTitle)"
        app:layout_constraintStart_toEndOf="@+id/topOfferImage"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:id="@+id/topOfferTitle"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/starting_at"
        app:layout_constraintStart_toEndOf="@+id/topOfferImage"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:id="@+id/startingAtText"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/topOfferTitle"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/rs_1200"
        rate="@(TopOfferItem.setRate)"
        app:layout_constraintStart_toEndOf="@+id/topOfferImage"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/RateText"
        app:layout_constraintTop_toBottomOf="@+id/startingAtText"/>




</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</layout>