<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ServiceDetailsPage">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButton"
        android:src="@drawable/back_icon"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ServiceTitle"
        android:layout_marginLeft="40dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/backButton"
        />

    <ScrollView
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/serviceImages"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        >
    </androidx.viewpager.widget.ViewPager>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ServiceTitle"
        android:id="@+id/serviceId"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/serviceImages"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addressLine1"
        android:id="@+id/addressLines1"
        app:layout_constraintTop_toBottomOf="@+id/serviceId"
        android:textStyle="normal"
        android:textSize="15sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addressLine1"
        android:id="@+id/addressLines2"
        app:layout_constraintTop_toBottomOf="@+id/addressLines1"
        android:textStyle="normal"
        android:textSize="15sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mapIcon"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/map_icon"
        app:layout_constraintTop_toBottomOf="@+id/serviceImages"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="20dp"
        android:id="@+id/separator1"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/addressLines2"
        app:layout_constraintLeft_toLeftOf="parent"
        />

        <LinearLayout
            android:id="@+id/holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/smallSummaryLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/openStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/open"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/openCloseTiming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/closesAt"
                    app:layout_constraintLeft_toRightOf="@+id/openStatus"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/showLargeSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/down_icon"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/largeSummaryLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator1">

                <TextView
                    android:id="@+id/mondayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/monday"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/mondayOpenStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:text="@string/closed"
                    app:layout_constraintLeft_toRightOf="@id/mondayText"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/TuesdayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/tuesday"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mondayText" />

                <TextView
                    android:id="@+id/tuesdayOpenStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/closed"
                    app:layout_constraintLeft_toRightOf="@id/mondayText"
                    app:layout_constraintTop_toBottomOf="@id/mondayText" />

                <TextView
                    android:id="@+id/WednesdayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/wednesday"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TuesdayText" />

                <TextView
                    android:id="@+id/wednesdayOpenStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/closed"
                    app:layout_constraintLeft_toRightOf="@id/mondayText"
                    app:layout_constraintTop_toBottomOf="@id/TuesdayText" />

                <TextView
                    android:id="@+id/ThursdayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/thursday"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/WednesdayText" />

                <TextView
                    android:id="@+id/thursdayOpenStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/closed"
                    app:layout_constraintLeft_toRightOf="@id/mondayText"
                    app:layout_constraintTop_toBottomOf="@id/wednesdayOpenStatus" />

                <TextView
                    android:id="@+id/FridayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/friday"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ThursdayText" />

                <TextView
                    android:id="@+id/fridayOpenStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/closed"
                    app:layout_constraintLeft_toRightOf="@id/mondayText"
                    app:layout_constraintTop_toBottomOf="@id/thursdayOpenStatus" />

                <TextView
                    android:id="@+id/SaturdayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/saturday"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/FridayText" />

                <TextView
                    android:id="@+id/saturdayOpenStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/closed"
                    app:layout_constraintLeft_toRightOf="@id/mondayText"
                    app:layout_constraintTop_toBottomOf="@id/fridayOpenStatus" />

                <TextView
                    android:id="@+id/SundayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/sunday"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/SaturdayText" />

                <TextView
                    android:id="@+id/SundayOpenStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/closed"
                    app:layout_constraintLeft_toRightOf="@id/mondayText"
                    app:layout_constraintTop_toBottomOf="@id/saturdayOpenStatus" />

                <ImageView
                    android:id="@+id/showSmallSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/up_icon"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/separator2"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/holder"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        app:layout_constraintTop_toBottomOf="@+id/separator2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/ratingText"
        android:textStyle="bold"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rating_icon"
        app:layout_constraintLeft_toRightOf="@+id/ratingText"
        app:layout_constraintTop_toBottomOf="@id/separator2"
        android:layout_marginTop="8dp"
        android:id="@+id/ratingIcon1"
        android:layout_marginLeft="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rating_icon"
        app:layout_constraintLeft_toRightOf="@+id/ratingIcon1"
        app:layout_constraintTop_toBottomOf="@id/separator2"
        android:layout_marginTop="8dp"
        android:id="@+id/ratingIcon2"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rating_icon"
        app:layout_constraintLeft_toRightOf="@+id/ratingIcon2"
        app:layout_constraintTop_toBottomOf="@id/separator2"
        android:layout_marginTop="8dp"
        android:id="@+id/ratingIcon3"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rating_icon"
        app:layout_constraintLeft_toRightOf="@+id/ratingIcon3"
        app:layout_constraintTop_toBottomOf="@id/separator2"
        android:layout_marginTop="8dp"
        android:id="@+id/ratingIcon4"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rating_icon"
        app:layout_constraintLeft_toRightOf="@+id/ratingIcon4"
        app:layout_constraintTop_toBottomOf="@id/separator2"
        android:layout_marginTop="8dp"
        android:id="@+id/ratingIcon5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rating_icon"
        android:text="@string/NoOfrating"
        app:layout_constraintLeft_toRightOf="@+id/ratingIcon5"
        app:layout_constraintTop_toBottomOf="@id/separator2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/noOfRatings"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/callNow"
        android:text="@string/callNow"
        app:layout_constraintTop_toBottomOf="@id/noOfRatings"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_drawable"
        android:drawableLeft="@drawable/call_icon"
        android:paddingLeft="30dp"
        android:textColor="@android:color/holo_blue_light"
        android:paddingRight="30dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bookAppointment"
        android:text="@string/book_appointment"
        app:layout_constraintTop_toBottomOf="@id/noOfRatings"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_blue_light"
        android:background="@drawable/button_drawable"
        android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
        android:layout_marginRight="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <include
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        layout="@layout/dashboard_item_base_layout"
        android:id="@+id/ourServiceslayout"
        app:layout_constraintTop_toBottomOf="@+id/bookAppointment"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>